--- a/Modulo2/CSS/css003.css
+++ b/Modulo2/CSS/css003.css
@@ -1,8 +1,26 @@
 @charset "UTF-8";
 
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body{
     background-image: linear-gradient(to top, #034159, #025951);
     background-attachment: fixed;
+}
+div{
+    text-align: center; 
+}
+h1{
+    color: #025951;
+    text-align: center;
+    text-shadow: 1px 1px 2px #03415923
+}
+p{
+    text-align: justify;
+}
+h2{ 
+    color: #034159;
 }
 main{
     background-color: white;
@@ -11,14 +29,4 @@ main{
     width: 600px;
     padding: 10px;
     margin: auto;
-}
-h1{
-    text-align: center;
-    color: white;
-    text-shadow: 1px 1px 2px black;
-}
-
-h2{
-    color: #034159;
-    text-align: center;
 }
